# agency-hack-egency

./: .env.example  .gitignore  LICENSE  Procfile  README.md  WINNING_HACKATHON_PLAN.md  package-lock.json  package.json  phantom-flow-project-brief.md  plan.md  pyproject.toml  requirements.txt  serve_dashboard.py  server.py  tailwind.config.js  vercel.json
.claude/: launch.json  settings.local.json
app/: streamlit_app.py
data/demo/: corp_records.json  corporations.json  grants.json  grants_demo.csv  results_demo.json
data/processed/: results.json
design-system/phantom-flow/: MASTER.md
docs/: agents-and-models.md  data-validation.md
src/phantom_flow/: __init__.py  agents.py  case_writer.py  config.py  corporations.py  demo_expansion.py  ingest.py  llm.py  matching.py  normalization.py  normalize.py  pipeline.py  scoring.py
tests/: test_agents.py  test_case_writer.py  test_matching.py  test_normalization.py  test_normalize.py  test_pipeline.py  test_scoring.py
web/: app.js  index.html  styles.css  tailwind.css
web/data/: results.json
